--- a/constraint-layout-start/app/src/main/res/layout/activity_main_chains.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_chains.xml
@@ -67,37 +67,33 @@
         android:id="@+id/settingsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:labelFor="@+id/settings"
         android:text="@string/settings"
         app:layout_constraintBaseline_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
         app:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/activity_main_chains"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="238dp"
         tools:layout_constraintBaseline_creator="0"
-        tools:layout_constraintLeft_creator="0"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="238dp" />
+        tools:layout_constraintLeft_creator="0" />
 
     <TextView
         android:id="@+id/cameraLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:labelFor="@+id/cameraType"
+        android:layout_marginLeft="16dp"
+        android:labelFor="@+id/cameraLabel"
         android:text="@string/camera"
         app:layout_constraintBaseline_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
         app:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/activity_main_chains"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="189dp"
         tools:layout_constraintBaseline_creator="0"
-        tools:layout_constraintLeft_creator="0"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="189dp" />
+        tools:layout_constraintLeft_creator="0" />
 
     <EditText
         android:id="@+id/settings"
@@ -106,8 +102,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/camera_settings"
-        app:layout_constraintEnd_toEndOf="@+id/cameraType"
-        app:layout_constraintStart_toStartOf="@+id/cameraType"
+        app:layout_constraintEnd_toEndOf="@+id/cameraLabel"
+        app:layout_constraintStart_toStartOf="@+id/cameraLabel"
         app:layout_editor_absoluteX="73dp"
         app:layout_editor_absoluteY="225dp"
         tools:layout_constraintLeft_creator="1"
@@ -115,10 +111,10 @@
         tools:layout_constraintTop_creator="0"
         app:layout_constraintHorizontal_bias="0.5"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cameraType" />
+        app:layout_constraintTop_toBottomOf="@+id/cameraLabel" />
 
     <EditText
-        android:id="@+id/cameraType"
+        android:id="@+id/cameraLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -139,10 +135,32 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <android.support.constraint.Barrier
+        android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/barrier"
-        app:barrierDirection="left"
-        app:constraint_referenced_ids="settings,cameraType" />
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="settings,cameraLabel"
+        tools:layout_editor_absoluteX="403dp"
+        tools:layout_editor_absoluteY="289dp" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/camera_value"
+        tools:layout_editor_absoluteX="106dp"
+        tools:layout_editor_absoluteY="192dp" />
+
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/camera_settings"
+        tools:layout_editor_absoluteX="107dp"
+        tools:layout_editor_absoluteY="244dp" />
 
 </android.support.constraint.ConstraintLayout>
