--- a/constraint-layout-start/app/src/main/res/layout/activity_main_done.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_done.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main_done"
@@ -12,133 +11,133 @@
     tools:layout_editor_absoluteY="80dp">
 
     <ImageView
-        android:src="@drawable/singapore"
+        android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/placeholder"
+        android:scaleType="centerCrop"
+        android:src="@drawable/singapore"
+        app:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/favorite"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
+        app:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_editor_absoluteX="0dp"
         app:layout_editor_absoluteY="0dp"
-        android:id="@+id/header"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/placeholder"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_creator="1"
-        app:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_creator="1"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/favorite"
-        android:layout_marginBottom="16dp"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
-        android:src="@drawable/ic_star"
+        android:id="@+id/favorite"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/info_background"
+        android:contentDescription="@string/placeholder"
+        android:padding="5dp"
+        android:src="@drawable/ic_star"
+        app:layout_constraintBottom_creator="0"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
+        app:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
+        app:layout_constraintVertical_bias="0.19"
         app:layout_editor_absoluteX="359dp"
         app:layout_editor_absoluteY="104dp"
-        android:id="@+id/favorite"
-        android:background="@drawable/info_background"
-        android:padding="5dp"
-        android:contentDescription="@string/placeholder"
-        app:layout_constraintTop_creator="1"
-        app:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_creator="0"
-        tools:layout_editor_absoluteX="359dp"
-        tools:layout_editor_absoluteY="104dp"
-        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
-        tools:layout_constraintTop_creator="0"
-        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
-        android:layout_marginEnd="16dp"
-        tools:layout_constraintRight_creator="0"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
-        android:layout_marginBottom="16dp"
         tools:layout_constraintBottom_creator="0"
-        app:layout_constraintVertical_bias="0.19" />
+        tools:layout_constraintRight_creator="0"
+        tools:layout_constraintTop_creator="0"
+        tools:layout_editor_absoluteX="359dp"
+        tools:layout_editor_absoluteY="104dp" />
 
     <TextView
-        android:text="@string/singapore"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="140dp"
-        android:id="@+id/title"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/singapore"
         android:textSize="24sp"
         app:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_creator="0"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="140dp"
         app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="0"
+        app:layout_constraintTop_creator="0"
         app:layout_constraintTop_toBottomOf="@+id/header"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintTop_creator="0" />
+        app:layout_editor_absoluteX="16dp"
+        app:layout_editor_absoluteY="140dp"
+        tools:layout_constraintLeft_creator="0"
+        tools:layout_constraintTop_creator="0"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="140dp" />
 
     <EditText
+        android:id="@+id/cameraLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/camera_value"
-        android:ems="10"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/settings"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/settings"
+        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
+        app:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_editor_absoluteX="73dp"
         app:layout_editor_absoluteY="176dp"
-        android:id="@+id/cameraType"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_creator="1"
-        app:layout_constraintRight_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/settings"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginTop="8dp"
-        tools:layout_constraintTop_creator="0"
-        app:layout_constraintRight_toRightOf="@+id/settings"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
-        android:layout_marginStart="8dp" />
+        tools:layout_constraintTop_creator="0" />
 
     <TextView
-        android:text="@string/camera"
+        android:id="@+id/cameraLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:labelFor="@+id/cameraLabel"
+        android:text="@string/camera"
+        app:layout_constraintBaseline_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/cameraLabel"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="189dp"
-        android:id="@+id/cameraLabel"
-        android:labelFor="@+id/cameraType"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintBaseline_creator="1"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="189dp"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
-        android:layout_marginStart="16dp"
+        tools:layout_constraintBaseline_creator="0"
         tools:layout_constraintLeft_creator="0"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
-        tools:layout_constraintBaseline_creator="0" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="189dp" />
 
     <TextView
-        android:text="@string/settings"
+        android:id="@+id/settingsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:labelFor="@+id/settings"
+        android:text="@string/settings"
+        app:layout_constraintBaseline_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="238dp"
-        android:id="@+id/settingsLabel"
-        android:labelFor="@+id/settings"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintBaseline_creator="1"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="238dp"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
-        android:layout_marginStart="16dp"
+        tools:layout_constraintBaseline_creator="0"
         tools:layout_constraintLeft_creator="0"
-        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
-        tools:layout_constraintBaseline_creator="0" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="238dp" />
 
     <android.support.constraint.Barrier
         android:id="@+id/labelBarrier"
@@ -148,89 +147,89 @@
         app:constraint_referenced_ids="cameraLabel,settingsLabel" />
 
     <EditText
+        android:id="@+id/settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/camera_settings"
-        android:ems="10"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/description"
+        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
+        app:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/cameraLabel"
         app:layout_editor_absoluteX="73dp"
         app:layout_editor_absoluteY="225dp"
-        android:id="@+id/settings"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_creator="1"
-        app:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/cameraType"
-        android:layout_marginTop="8dp"
-        tools:layout_constraintTop_creator="0"
-        app:layout_constraintRight_toRightOf="@+id/description"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
-        android:layout_marginStart="8dp" />
+        tools:layout_constraintTop_creator="0" />
 
     <Button
-        android:text="@string/upload"
+        android:id="@+id/upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/upload"
+        app:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
         app:layout_editor_absoluteX="307dp"
         app:layout_editor_absoluteY="538dp"
-        android:id="@+id/upload"
-        app:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_creator="1"
-        tools:layout_editor_absoluteX="307dp"
-        tools:layout_editor_absoluteY="538dp"
-        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
-        android:layout_marginEnd="16dp"
+        tools:layout_constraintBottom_creator="0"
         tools:layout_constraintRight_creator="0"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
-        android:layout_marginBottom="16dp"
-        tools:layout_constraintBottom_creator="0" />
+        tools:layout_editor_absoluteX="307dp"
+        tools:layout_editor_absoluteY="538dp" />
 
     <Button
-        android:text="@string/discard"
+        android:id="@+id/discard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:elevation="0dp"
+        android:text="@string/discard"
+        app:layout_constraintBaseline_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
+        app:layout_constraintRight_creator="0"
+        app:layout_constraintRight_toLeftOf="@+id/upload"
         app:layout_editor_absoluteX="211dp"
         app:layout_editor_absoluteY="538dp"
-        android:id="@+id/discard"
-        android:elevation="0dp"
-        app:layout_constraintRight_creator="0"
-        app:layout_constraintBaseline_creator="1"
-        tools:layout_editor_absoluteX="211dp"
-        tools:layout_editor_absoluteY="538dp"
-        app:layout_constraintRight_toLeftOf="@+id/upload"
-        android:layout_marginEnd="8dp"
+        tools:layout_constraintBaseline_creator="0"
         tools:layout_constraintRight_creator="0"
-        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
-        tools:layout_constraintBaseline_creator="0" />
+        tools:layout_editor_absoluteX="211dp"
+        tools:layout_editor_absoluteY="538dp" />
 
     <TextView
-        android:text="@string/singapore_description"
+        android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="end"
+        android:fadingEdge="vertical"
+        android:text="@string/singapore_description"
+        android:textSize="15sp"
+        app:layout_constraintBottom_creator="0"
+        app:layout_constraintBottom_toTopOf="@+id/discard"
+        app:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
+        app:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
+        app:layout_constraintTop_creator="0"
+        app:layout_constraintTop_toBottomOf="@+id/settings"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="274dp"
-        android:id="@+id/description"
-        android:fadingEdge="vertical"
-        android:ellipsize="end"
-        android:textSize="15sp"
-        app:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_creator="0"
-        app:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_creator="0"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="274dp"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
-        android:layout_marginStart="16dp"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/settings"
-        android:layout_marginTop="8dp"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
-        android:layout_marginEnd="16dp"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/discard"
-        android:layout_marginBottom="8dp"
-        tools:layout_constraintBottom_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="274dp" />
 
 </android.support.constraint.ConstraintLayout>
