--- a/constraint-layout-start/app/src/main/res/layout/activity_main_ratio.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_ratio.xml
@@ -6,4 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:src="@drawable/singapore"
+        app:layout_constraintDimensionRatio="h,16:9"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="128dp" />
 </android.support.constraint.ConstraintLayout>
